# onnx2torch2

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  pyproject.toml
.github/: wordlist.txt
.github/workflows/: REUSE.wheelbuild.yaml  integration.yml  lint.yml  manual-wheelbuild.yaml
onnx2torch/node_converters/: reshape.py  resize.py  slice.py
onnx2torch2/node_converters/: __init__.py  arg_extrema.py  base_element_wise.py  global_average_pool.py  gridsample.py  isinf.py  isnan.py  logical.py  nms.py  nonzero.py  pad.py  range.py  reduce.py  registry.py  reshape.py  scatter_nd.py  squeeze.py
onnx2torch2/utils/: custom_export_to_onnx.py
tests/models/: models_test.py
tests/node_converters/: conv_test.py  registry_test.py  squeeze_test.py
tests/utils/: common.py
